[package]
name = "bzippr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
thiserror = "2.0.16"

[dev-dependencies]
test-case = "3.3.1"

[lints.rust]
dead_code = "allow"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
